Fixed display issues with header on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -4,31 +4,36 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Lora', serif;
 }
 
 header {
   background: rgb(255, 255, 255);
   background: linear-gradient(90deg, rgba(255, 255, 255, 1) 50%, rgba(0, 178, 217, 1) 100%);
-  padding: 2rem;
-  height: 7rem;
+  padding: 2rem 0 2rem 0;
   width: 100%;
   position: fixed;
   top: 0;
+  left: 0;
   border-bottom: 2px solid #e41e26;
-  display: inline-flex;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  height: 6rem;
 }
 
 .banner img {
-  height: 7rem;
-  width: 400px;
+  width: 300px;
 }
 
 @media only screen and (min-width: 768px) {
   .banner img {
-    height: 9rem;
     width: 500px;
   }
 }
@@ -49,7 +54,7 @@ h1.slogan {
 }
 
 main {
-  margin-top: 178px;
+  margin-top: 160px;
   background: white;
 }
 
@@ -63,7 +68,7 @@ main {
   text-align: center;
 }
 
-.links > div {
+.links>div {
   margin-bottom: 4rem;
 }
 
@@ -77,7 +82,7 @@ a.link {
 
 .link-text {
   margin-top: 1rem;
-  width: 100px;
+  width: 90px;
 
 }
 
@@ -86,8 +91,8 @@ a.link {
   border-radius: 200px 200px 200px 200px;
   background: #00b2d9;
   border: 2px solid #e41e26;
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
